# Console-Game

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  unix.yml  windows.yml  windows.yml.todo
cmake/: Config.cmake
rc/: ConfigCG.in.json  ConfigCG.json
src/: board.cpp  board.h  config.cpp  config.h  config.in.cpp  definitions.in.h  direction.cpp  direction.h  enemies.h  game.cpp  game.h  game.in.cpp  game.in.h  libs.h  main.cpp  positioned.cpp  positioned.h
